--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #2e2c30; /* light gray background */
+  background-color: #2e2c30;
   font-family: helvetica;
   color: #eaeaea;
 }
