--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ body {
 #Title {
   font-size: 2em;
   margin-bottom: 20px;
+  background: linear-gradient(to right, #e3474a, #d0b9b9);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% 100%;
+  animation: gradient 2s ease-in-out infinite alternate,
+    glow 2s ease-in-out infinite alternate;
 }
 
 .btn {
@@ -37,19 +43,14 @@ body {
 .btn:hover {
   background-color: #d8d5d5;
   color: #e3474a;
-  padding: 5px 10px;
+  padding: 7px 13px;
   border-radius: 10px;
+  text-shadow: 0 0 50px #e3474a;
+  animation: glow 0.8s ease-in-out infinite alternate;
 }
+
 #ButtonDiv {
   margin: 50px;
-}
-#Title {
-  background: linear-gradient(to right, #e3474a, #d0b9b9);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 200% 100%;
-  animation: gradient 2s ease-in-out infinite alternate;
-  animation: glow 2s ease-in-out infinite alternate;
 }
 
 @keyframes gradient {
@@ -69,6 +70,7 @@ body {
     text-shadow: 0 0 15px #e3474a;
   }
 }
+
 #PlyerDiv {
   font-size: 20px;
   margin: 20px auto;
