--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   margin-bottom: 20px;
   background: linear-gradient(to right, #e3474a, #d0b9b9);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
   background-size: 200% 100%;
   animation: gradient 2s ease-in-out infinite alternate,
     glow 2s ease-in-out infinite alternate;
@@ -45,8 +45,8 @@ body {
   color: #e3474a;
   padding: 7px 13px;
   border-radius: 10px;
-  text-shadow: 0 0 50px #e3474a;
-  animation: glow 0.8s ease-in-out infinite alternate;
+  text-shadow: 0 0 10px #ff0004;
+  animation: glow 0.3s ease-in-out infinite alternate;
 }
 
 #ButtonDiv {
